docker/rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  replicas: 1 #Deploy 1 pod
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: "traptibalgi/rest:v3"  
          ports:
            - containerPort: 5000
