docker/rest/rest-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
spec:
  replicas: 1 #Deploy 1 pod
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
        - name: rest-server
          image: "traptibalgi/demucs-rest:v21"  
          ports:
            - containerPort: 5000
